# PolicyPilot

./: .gitignore  pyproject.toml
data/evaluation/: markdown_cases.jsonl
data/raw/: sample_policy.md
scripts/: ingest_documents.py  run_chroma_indexing.py  run_chroma_indexing_old.py  run_embed_documents.py  run_rag_evaluation.py  test_chroma_retrieval.py  test_embeddings.py  test_llm_client.py  test_pdf_assembler.py  test_pdf_basic_chunking.py  test_pdf_cleaner.py  test_pdf_loader.py  test_pdf_section_parser.py  test_rag_pipeline.py
src/policypilot/embeddings/: __init__.py  embed_documents.py  embedding_config.py  huggingface_embedder.py  jsonl_chunk_reader.py
src/policypilot/evaluation/: _init__.py  evaluation_metrics.py  evaluation_models.py  evaluation_reader.py  evaluation_runner.py
src/policypilot/ingestion/: config.py
src/policypilot/ingestion/chunkers/: recursive_character_chunker.py
src/policypilot/ingestion/loaders/: markdown_loader.py
src/policypilot/ingestion/pdf/: pdf_assembler.py  pdf_cleaner.py  pdf_loader.py  pdf_section_parser.py
src/policypilot/ingestion/writers/: jsonl_writer.py
src/policypilot/llm/: __init__.py  llm_client.py  llm_config.py
src/policypilot/ragservice/: __init__.py  rag_models.py  rag_prompt.py  rag_service.py
src/policypilot/vectorstore/: __init__.py  chroma_config.py  chroma_store.py  chroma_store_old.py
